# MLSystem2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: cd-code.yml
Geoalert/Mapflow/: _code_index.txt  _dirs.txt  _geoalert_rg_trace.txt
Geoalert/_analysis/: all_dependency_files.txt  class_registry_search_full.txt  class_registry_trace.md  component_update_report.md  dependency_search.txt  geoalert_code_index_full.txt  geoalert_dirs_full.txt  geoalert_java_index_full.txt  route_mapflow_to_workflow_engine.md  route_mapflow_to_workflow_engine.txt  tensor_abi_report.md  tensor_ops_search_full.txt  workflow_engine_action_trace.md  workflow_engine_action_trace.txt  workflow_engine_code_index.txt  workflow_engine_file_index.txt
configs/: example.local.yaml  example.server.yaml  multiclass.example.server.yaml
docs/: architecture.md  codex_rules.md  hpo_instruction.md  module_rules.md
docs/modules/: cli_module.md  dataset_preparing_module.md  inference_module.md  inference_pipeline_module.md  metrics_module.md  mlflow_adapter_module.md  models_module.md  settings_module.md  (+4 more)
tests/: test_architecture_boundaries.py  test_cd_workflow.py  test_dataset_preparing_contracts.py  test_dataset_preparing_split.py  test_dataset_preparing_vrt.py  test_docs_exist.py  test_forbidden_dependencies.py  test_mlflow_adapter.py  test_models_segformer.py  test_modules_test_diagnostics.py  test_prepare_images_for_vrt.py  test_public_contracts.py  test_settings_loader.py  test_tile_preparation_dataloader.py  test_train_loop.py  test_train_pipeline_contract.py
(+1606 files in other folders)
