[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsystem2"
version = "0.1.0"
description = "Минимальная архитектура командной строки MLSystem 2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "PyYAML",
  "mlflow",
  "numpy",
  "boto3",
  "rasterio",
  "shapely",
  "pyproj",
]

[project.optional-dependencies]
torch = [
  "torch",
  "torchvision",
  "transformers",
]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
mlsystem2-train = "mlsystem2.cli.train:main"
mlsystem2-infer = "mlsystem2.cli.infer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
